Fix grid spacing

--- a/css/atoms/form-field.css
+++ b/css/atoms/form-field.css
@@ -6,6 +6,7 @@
 
 .form-field__label {
     font-weight: 600;
+    letter-spacing: 2px;
 }
 
 .form-field__dropdown {
@@ -16,4 +17,13 @@
     justify-content: space-between;
     padding: 8px 16px;
     border-radius: 8px;
+}
+
+@media screen and (max-width: 1000px) {
+    .form-field__dropdown {
+        gap: 100px;
+        justify-content: space-between;
+        padding: 8px 16px;
+        border-radius: 8px;
+    }
 }
